--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.20.0"
+    implementation 'com.android.support:design:28.0.0'
 }
